--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -55,12 +55,12 @@
         <div class="line2"></div>
       </div>
       <div class="gfg-icon">
-        <a href="/users/auth/google" class="google"
+        <a href="/users/auth/google" class="google" style="text-decoration: none;"
           ><img
             src="https://cdn-icons-png.flaticon.com/512/300/300221.png"
             alt="google"
         /></a>
-        <a href="/users/auth/github" class="github"
+        <a href="/users/auth/github" class="github" style="text-decoration: none;"
           ><i class="fa-brands fa-github"></i>
         </a>
       </div>
