--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -50,7 +50,7 @@
         src="https://cdn-icons-png.flaticon.com/512/300/300221.png"
         alt="google"
     /></a>
-    <a href="/users/auth/github" class="github"
+    <a href="/users/auth/github" class="github" style="text-decoration: none;"
       ><i class="fa-brands fa-github"></i>
     </a>
   </div>
