--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -113,7 +113,7 @@
         </div>
 
         <div>
-          <a id="github" href="/users/auth/github"
+          <a id="github" href="/users/auth/github" style="text-decoration: none;"
             ><i class="fa-brands fa-github"></i>
             <p>Continue with github</p>
           </a>
@@ -122,7 +122,7 @@
       <div class="Already-account">
         Already have an account?
         <span>
-          <a href="/users/sign-in"
+          <a href="/users/sign-in" style="text-decoration: none;"
             >&nbsp; Sign in<i class="fa-solid fa-arrow-right"></i
           ></a>
         </span>
