--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -10,5 +10,6 @@ footer {
   background-color: #76b8fa;
   font-weight: 600;
   color: #060606;
+  opacity: 0.5;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
