--- a/assets/css/reset_password.css
+++ b/assets/css/reset_password.css
@@ -136,6 +136,7 @@
 .reset-form-section .gfg-icon .google {
   height: 45px;
   width: 80px;
+  list-style: none;
   background-color: white;
   border: 1px solid lightgray;
   border-radius: 15px;
